# Claude_WHY

./: .env.example  .gitignore  ARCHITECTURE_REPORT.md  HOW_TO_ADD_PROJECT.md  IP_CONFIG_TABLE.md  PROJECT_DOCUMENTATION.md  PROJE_YAPISI.md  QUICKSTART.md  README.md  app.py  app_v2.py  blind_benchmark_report.json  blind_benchmark_v2_report.json  blind_benchmark_v3_report.json  blind_benchmark_v4_report.json  blind_benchmark_v5_report.json  evaluation_ce_series.json  projects.yaml  pyproject.toml  reinstall_chromadb.bat  resume_training.bat  robustness_report.json  test_rag_quick.py  train_organized.bat  training_organized_checkpoint.json
.github/: copilot-instructions.md
data/: README.md  rag_validation_test.txt
data/docs/: .gitkeep  README.md  SYSTEM_CONFIGURATION.md  VIVADO_HLS_OPTIMIZATION.md  ZYNQ7000_DESIGN_GUIDE.md
data/fpga_rag_v2_output/: altyapi_analiz_raporu.md  fpga_rag_v2_detayli_analiz.md  pipeline_graph.json  pipeline_report.md
scripts/: add_new_knowledge_nodes.py  backfill_fts5.py  build_full_index.py  build_graph_db.py  chat.py  check_doc_coverage.py  discover_projects.py  fix_architecture_gaps.py  fix_chromadb.py  fix_graph_db.py  generate_architecture_pdf.py  generate_project_node.py  index_docs.py  index_pdf_rm.py  index_source_files.py  monitor_training.py  parse_params.py  query_v2.py  quick_llm_test.py  run_cross_reference.py  run_matching.py  scenarios_v2.py  show_stats.py  start_chromadb_server.py  test_blind_benchmark.py  test_blind_benchmark_v2.py  test_blind_benchmark_v3.py  test_blind_benchmark_v4.py  test_blind_benchmark_v5.py  test_chromadb.py  test_rag_evaluation.py  test_robustness.py  test_v2_20q.py  test_v2_ce_series.py  train.py  train_by_project.py  train_categorized.py  train_incremental.py  train_organized.py  train_resume.py
src/: __init__.py  main.py  rag_pipeline.py
src/fpga/: __init__.py  accelerator.py  vector_ops.py
src/gcp/: __init__.py  bigquery_client.py  storage.py
src/rag/: __init__.py  claude_code_generator.py  claude_generator.py  embeddings.py  gemini_generator.py  generator.py  llm_factory.py  openai_generator.py  retriever.py  sentence_embeddings.py  vertex_embeddings.py
src/rag_v2/: __init__.py  cross_reference_detector.py  doc_store.py  embedder.py  fts5_index.py  graph_store.py  loader.py  (+7 more)
tests/: test_rag_v2.py  test_text_splitter.py  test_vector_ops.py
(+8 files in other folders)
